--- a/client/package.json
+++ b/client/package.json
@@ -11,14 +11,16 @@
   "dependencies": {
     "next": "14.1.0",
     "react": "^18",
+    "react-chat-elements": "^12.0.13",
     "react-dom": "^18",
-    "react-hook-form": "^7.50.1"
+    "react-hook-form": "^7.50.1",
+    "react-icons": "^5.0.1"
   },
   "devDependencies": {
-    "autoprefixer": "^10.0.1",
+    "autoprefixer": "^10.4.17",
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
-    "postcss": "^8",
-    "tailwindcss": "^3.3.0"
+    "postcss": "^8.4.35",
+    "tailwindcss": "^3.4.1"
   }
 }
