--- a/client/package.json
+++ b/client/package.json
@@ -12,8 +12,8 @@
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
-    "react-hook-form": "^7.50.1",
-    "sweetalert2": "^11.10.5"
+    "react-hook-form": "^7.50.1"
+    
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
