--- a/client/package.json
+++ b/client/package.json
@@ -9,11 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.6.7",
     "next": "14.1.0",
     "react": "^18",
     "react-chat-elements": "^12.0.13",
     "react-dom": "^18",
-    "react-hook-form": "^7.50.1"
     "react-hook-form": "^7.50.1",
     "react-icons": "^5.0.1"
   },
