--- a/client/package.json
+++ b/client/package.json
@@ -15,7 +15,8 @@
     "react-chat-elements": "^12.0.13",
     "react-dom": "^18",
     "react-hook-form": "^7.50.1",
-    "react-icons": "^5.0.1"
+    "react-icons": "^5.0.1",
+    "react-toastify": "^10.0.4"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.17",
