--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "emoji-picker-react": "^4.7.18",
     "next": "14.1.0",
     "react": "^18",
     "react-chat-elements": "^12.0.13",
