--- a/client/package.json
+++ b/client/package.json
@@ -9,15 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "emoji-picker-react": "^4.7.18",
     "axios": "^1.6.7",
+    "emoji-picker-react": "^4.7.18",
     "next": "14.1.0",
     "react": "^18",
     "react-chat-elements": "^12.0.13",
     "react-dom": "^18",
     "react-hook-form": "^7.50.1",
     "react-icons": "^5.0.1",
-    "react-toastify": "^10.0.4"
+    "react-toastify": "^10.0.4",
+    "socket.io-client": "^4.7.4"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.17",
