--- a/client/package.json
+++ b/client/package.json
@@ -18,7 +18,8 @@
     "react-hook-form": "^7.50.1",
     "react-icons": "^5.0.1",
     "react-toastify": "^10.0.4",
-    "socket.io-client": "^4.7.4"
+    "socket.io-client": "^4.7.4",
+    "zustand": "^4.5.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.17",
