--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "react-chat-elements": "^12.0.13",
     "react-dom": "^18",
     "react-hook-form": "^7.50.1",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^5.0.1",
     "react-toastify": "^10.0.4",
     "socket.io-client": "^4.7.4",
