--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^1.6.7",
     "emoji-picker-react": "^4.7.18",
+    "lottie-react": "^2.4.0",
     "next": "14.1.0",
     "react": "^18",
     "react-chat-elements": "^12.0.13",
