--- a/client/package.json
+++ b/client/package.json
@@ -27,6 +27,7 @@
     "autoprefixer": "^10.4.17",
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
+    "file-loader": "^6.2.0",
     "postcss": "^8.4.35",
     "tailwindcss": "^3.4.1"
   }
